# niveshpy

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  prek.toml  pyproject.toml  sitemap.xml
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/instructions/: tests.instructions.md
.github/scripts/: get_release_notes.py  update_changelog.py
.github/workflows/: documentation.yml  lint.yml  publish.yml  release.yml  test.yml
LICENSE/: index.html
advanced/: index.html
advanced/parsers/: index.html
advanced/providers/: index.html
architecture/: index.html
architecture/direction/: index.html
changelog/: index.html
cli/: index.html
cli/accounts/: index.html
cli/parse/: index.html
cli/prices/: index.html
cli/queries/: index.html
cli/reports/: index.html
cli/securities/: index.html
cli/transactions/: index.html
docs/: LICENSE.md  changelog.md  getting-started.md  index.md  macros.md  parsers.md
docs/advanced/: index.md  parsers.md  providers.md
docs/architecture/: direction.md  index.md
docs/cli/: accounts.md  index.md  parse.md  prices.md  queries.md  reports.md  securities.md  transactions.md
getting-started/: index.html
macros/: index.html
niveshpy/: __init__.py  database.py  db.py  exceptions.py  main.py  utils.py
niveshpy/cli/: __init__.py  account.py  app.py  main.py  parse.py  price.py  report.py  security.py  transaction.py
niveshpy/cli/models/: __init__.py  account.py  accounts.py  price.py  report.py  security.py  transaction.py
niveshpy/cli/utils/: __init__.py  builders.py  display.py  essentials.py  flags.py  formatters.py  inputs.py  logging.py  models.py  output.py  output_models.py  overrides.py  setup.py  style.py
niveshpy/core/: __init__.py  app.py  converter.py  logging.py  parsers.py  providers.py  style.py  validators.py
niveshpy/core/query/: __init__.py  ast.py  parser.py  prepare.py  tokenizer.py  tokens.py
niveshpy/db/: account.py  database.py  init.sql  prices.py  query.py  repositories.py  result.py  security.py  transaction.py
niveshpy/domain/: __init__.py
niveshpy/domain/models/: __init__.py  lot.py
niveshpy/domain/query/: __init__.py  ast.py
niveshpy/domain/repositories/: __init__.py  account_repository.py  price_repository.py  security_repository.py  transaction_repository.py
niveshpy/domain/services/: __init__.py  lot_accounting.py  transaction_validation.py
niveshpy/infrastructure/: __init__.py
niveshpy/infrastructure/sqlite/: __init__.py  converters.py  models.py  query.py  query_filters.py  query_filters_new.py  sqlite_db.py  sqlite_db_new.py
niveshpy/infrastructure/sqlite/migrations/: 0000-initial-schema.sql  0001-remove-sqlmodel.sql  0002-add-transaction-reversal.sql  README.md
niveshpy/infrastructure/sqlite/repositories/: __init__.py  sqlite_account_repository.py  sqlite_price_repository.py  sqlite_security_repository.py  sqlite_transaction_repository.py
niveshpy/models/: __init__.py  _helper.py  account.py  base.py  output.py  parser.py  price.py  provider.py  report.py  security.py  transaction.py  types.py
niveshpy/parsers/: cas.py
niveshpy/providers/: amfi.py
niveshpy/repositories/: __init__.py  account_repository.py  security_repository.py
niveshpy/services/: __init__.py  account.py  account_service.py  app.py  helpers.py  parsing.py  parsing_service.py  price.py  price_service.py  report.py  report_service.py  result.py  security.py  security_service.py  transaction.py  transaction_service.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_database.py  test_exceptions.py
tests/cli/: conftest.py  test_accounts_integration.py  test_error_handling.py  test_flags.py  test_integration_isolation.py  test_main.py  test_reports_integration.py  test_securities_integration.py  test_transactions_integration.py
tests/cli/utils/: __init__.py  test_formatters.py
tests/core/: test_converter.py  test_parsers.py  test_providers.py
tests/core/query/: conftest.py  test_parser.py  test_prepare.py  test_tokenizer.py
tests/domain/services/: test_lot_accounting_service.py  test_transaction_validation_service.py
tests/infrastructure/sqlite/: test_models.py  test_query.py  test_query_filters.py  test_sqlite_db.py
tests/infrastructure/sqlite/repositories/: conftest.py  test_db_constraints.py  test_sqlite_account_repository.py  test_sqlite_price_repository.py  test_sqlite_security_repository.py  test_sqlite_transaction_repository.py
tests/models/: test_account.py  test_output.py  test_price.py  test_report.py  test_security.py  test_transaction.py
tests/parsers/: __init__.py  test_cas.py
tests/providers/: test_amfi.py
tests/services/: __init__.py  conftest.py  price_test_providers.py  test_account_service.py  test_helpers.py  test_parsing_service.py  test_price_service.py  test_report_service.py  test_security_service.py  test_transaction_service.py
