[build-system]
requires = ["hatchling >= 1.27.0, < 2.0.0", "hatch-vcs == 0.4.*"]
build-backend = "hatchling.build"

[project]
name = "NiveshPy"
description = "A simple python library for all your investment needs."
dynamic = ["version"]
dependencies = [
    "polars[pyarrow]>=1.29.0,<2.0.0",
    "scipy >= 1.13.1, < 2.0.0",
    "numpy >= 2.0.2, < 3.0.0",
    "platformdirs >= 4.3.8, < 5.0.0",
    "duckdb>=1.4.0, !=1.4.0",
    "casparser>=0.8.1",
    "click>=8.3.0",
    "inquirerpy>=0.3.4",
    "rich>=13.9.4",
    "requests>=2.32.5",
    "sqlmodel>=0.0.30",
    "pydantic>=2.11.10",
]
requires-python = ">=3.11"
authors = [
    { name = "Yashovardhan Dhanania", email = "yashovardhandhanania@gmail.com" },
]
maintainers = [
    { name = "Yashovardhan Dhanania", email = "yashovardhandhanania@gmail.com" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["finance", "mutual funds", "investment"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
pandas = ["pandas >= 2.2.2, < 3.0.0", "pyarrow >= 20.0.0, < 21.0.0"]
all = ["niveshpy[pandas]"]

[project.urls]
Homepage = "http://github.com/yashovardhan99/niveshpy"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/yashovardhan99/niveshpy.git"
Issues = "http://github.com/yashovardhan99/niveshpy/issues"
Changelog = "http://github.com/yashovardhan99/niveshpy/blob/master/CHANGELOG.md"
funding = "https://github.com/yashovardhan99/niveshpy"
releasenotes = "https://github.com/yashovardhan99/niveshpy/releases"

[project.scripts]
niveshpy = "niveshpy.cli.main:cli"

[project.entry-points."niveshpy.parsers"]
cas = "niveshpy.parsers.cas:CASParserFactory"

[project.entry-points."niveshpy.providers.price"]
amfi = "niveshpy.providers.amfi:AMFIProviderFactory"

[dependency-groups]
testing = ["pytest >= 8.3.5, < 9.0.0", "coverage[toml] >= 7.8.0, < 8.0.0"]
linting = ["ruff >= 0.11.9, < 0.12.0", "mypy >= 1.18.2, < 2.0.0"]
stubs = ["pandas-stubs >= 2.2.2, < 3.0.0", "types-requests>=2.32.4.20250913"]
docs = [
    "mkdocs-material == 9.*",
    "mkdocstrings[python]",
    "mkdocs-macros-plugin == 1.*",
    "mkdocs-click>=0.9.0",
]
dev = [
    { include-group = "testing" },
    { include-group = "linting" },
    { include-group = "stubs" },
    { include-group = "docs" },
    "pandas >= 2.2.2, < 3.0.0",
]

[tool.ruff.lint]
select = [
    "E",   # PyCodestyle errors
    "W",   # PyCodestyle warnings
    "F",   # PyFlakes
    "D",   # Docstrings
    "B",   # Bugbear
    "Q",   # Quotes
    "UP",  # PyUpgrade
    "I",   # isort
    "C4",  # Flake8-comprehensions
    "G",   # logging-format
    "ISC", # Implicit string concatenation
    "PIE", # flake8-pie
    "PLE", # Pylint errors
]
ignore = ["E501"] # Line too long

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if logger\\.isEnabledFor\\(logging\\.DEBUG\\)",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",

    # Don't complaint about type-checking code, it isn't run:
    "if TYPE_CHECKING",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
