[build-system]
requires = ["hatchling >= 1.27.0, < 2.0.0", "hatch-vcs == 0.4.*"]
build-backend = "hatchling.build"

[project]
name = "NiveshPy"
description = "A simple python library for all your investment needs."
dynamic = ["version"]
dependencies = [
    "casparser>=0.8.1,<0.9.0",
    "click>=8.3.1, < 9.0.0",
    "inquirerpy>=0.3.4, < 1.0.0",
    "platformdirs >= 4.5.1, < 5.0.0",
    "pydantic>=2.12.5, < 3.0.0",
    "requests>=2.32.5, < 3.0.0",
    "rich>=13.9.4, < 15.0.0",         # cas parser doesn't support rich 14 yet
    "sqlalchemy>=2.0.45, < 3.0.0",
    "sqlmodel>=0.0.31, < 1.0.0",
]
requires-python = ">=3.11"
authors = [
    { name = "Yashovardhan Dhanania", email = "yashovardhandhanania@gmail.com" },
]
maintainers = [
    { name = "Yashovardhan Dhanania", email = "yashovardhandhanania@gmail.com" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["finance", "mutual funds", "investment"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "http://github.com/yashovardhan99/niveshpy"
Documentation = "https://yashovardhan99.github.io/niveshpy/"
Repository = "https://github.com/yashovardhan99/niveshpy.git"
Issues = "http://github.com/yashovardhan99/niveshpy/issues"
Changelog = "http://github.com/yashovardhan99/niveshpy/blob/master/CHANGELOG.md"
funding = "https://github.com/yashovardhan99/niveshpy"
releasenotes = "https://github.com/yashovardhan99/niveshpy/releases"

[project.scripts]
niveshpy = "niveshpy.cli.main:cli"

[project.entry-points."niveshpy.parsers"]
cas = "niveshpy.parsers.cas:CASParserFactory"

[project.entry-points."niveshpy.providers.price"]
amfi = "niveshpy.providers.amfi:AMFIProviderFactory"

[dependency-groups]
testing = ["coverage>=7.13.1, < 8.0.0", "pytest>=9.0.2, < 10.0.0"]
linting = ["ruff >= 0.14.10, < 1.0.0", "mypy >= 1.19.1, < 2.0.0"]
stubs = ["types-requests>=2.32.4.20250913, < 3.0.0"]
docs = [
    "mkdocs-click>=0.9.0, < 1.0.0",
    "mkdocs-macros-plugin >= 1.5.0, < 2.0.0",
    "mkdocs-material >= 9.7.1, < 10.0.0",
    "mkdocstrings[python] >= 0.30.1, < 1.0.0",
]
dev = [
    { include-group = "testing" },
    { include-group = "linting" },
    { include-group = "stubs" },
    { include-group = "docs" },
]

[tool.ruff.lint]
select = [
    "E",   # PyCodestyle errors
    "W",   # PyCodestyle warnings
    "F",   # PyFlakes
    "D",   # Docstrings
    "B",   # Bugbear
    "Q",   # Quotes
    "UP",  # PyUpgrade
    "I",   # isort
    "C4",  # Flake8-comprehensions
    "G",   # logging-format
    "ISC", # Implicit string concatenation
    "PIE", # flake8-pie
    "PLE", # Pylint errors
    "S",   # flake8-bandit
]
ignore = ["E501"] # Line too long

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # Allow use of assert in tests

[tool.ruff.format]
docstring-code-format = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if logger\\.isEnabledFor\\(logging\\.DEBUG\\)",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",

    # Don't complaint about type-checking code, it isn't run:
    "if TYPE_CHECKING",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.uv]
add-bounds = "major"
